# Python-DiscordBot

./: README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt  todo.txt
APIs/: handleAPIs.py
apps/: RockPaperScissors.py  chatBot.py  movieDB.py  weatherForecast.py
