[tool.poetry]
name = "repl_python3_LordWiles-Bot-v2"
version = "0.1.0"
description = ""
authors = ["Your Name lordwilee@outlook.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
